Updated data to 02/21/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -732,6 +732,7 @@
 <script src=IntData_696.js></script>
 <script src=IntData_697.js></script>
 <script src=IntData_698.js></script>
+<script src=IntData_699.js></script>
 
 <script>
 
