--- a/covid19reg.html
+++ b/covid19reg.html
@@ -732,6 +732,7 @@
 <script src=RegData_696.js></script>
 <script src=RegData_697.js></script>
 <script src=RegData_698.js></script>
+<script src=RegData_699.js></script>
 
 <script>
 
