--- a/covid19state.html
+++ b/covid19state.html
@@ -674,6 +674,7 @@
 <script src=USAData_696.js></script>
 <script src=USAData_697.js></script>
 <script src=USAData_698.js></script>
+<script src=USAData_699.js></script>
 
 <script>
 
