Updated data to 02/22/2022 + VaxData

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -733,6 +733,7 @@
 <script src=RegData_697.js></script>
 <script src=RegData_698.js></script>
 <script src=RegData_699.js></script>
+<script src=RegData_700.js></script>
 
 <script>
 
