--- a/covid19usa.html
+++ b/covid19usa.html
@@ -698,6 +698,7 @@
 <script src=USAData_697.js></script>
 <script src=USAData_698.js></script>
 <script src=USAData_699.js></script>
+<script src=USAData_700.js></script>
 <script>
 
 var MinLat = 25;
