--- a/covid19int.html
+++ b/covid19int.html
@@ -733,6 +733,7 @@
 <script src=IntData_697.js></script>
 <script src=IntData_698.js></script>
 <script src=IntData_699.js></script>
+<script src=IntData_700.js></script>
 
 <script>
 
