Updated data to 02/23/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -734,6 +734,7 @@
 <script src=IntData_698.js></script>
 <script src=IntData_699.js></script>
 <script src=IntData_700.js></script>
+<script src=IntData_701.js></script>
 
 <script>
 
