--- a/covid19reg.html
+++ b/covid19reg.html
@@ -734,6 +734,7 @@
 <script src=RegData_698.js></script>
 <script src=RegData_699.js></script>
 <script src=RegData_700.js></script>
+<script src=RegData_701.js></script>
 
 <script>
 
