--- a/covid19usa.html
+++ b/covid19usa.html
@@ -699,6 +699,7 @@
 <script src=USAData_698.js></script>
 <script src=USAData_699.js></script>
 <script src=USAData_700.js></script>
+<script src=USAData_701.js></script>
 <script>
 
 var MinLat = 25;
