--- a/covid19state.html
+++ b/covid19state.html
@@ -676,6 +676,7 @@
 <script src=USAData_698.js></script>
 <script src=USAData_699.js></script>
 <script src=USAData_700.js></script>
+<script src=USAData_701.js></script>
 
 <script>
 
