Updated data to 02/24/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -735,6 +735,7 @@
 <script src=IntData_699.js></script>
 <script src=IntData_700.js></script>
 <script src=IntData_701.js></script>
+<script src=IntData_702.js></script>
 
 <script>
 
