--- a/covid19reg.html
+++ b/covid19reg.html
@@ -735,6 +735,7 @@
 <script src=RegData_699.js></script>
 <script src=RegData_700.js></script>
 <script src=RegData_701.js></script>
+<script src=RegData_702.js></script>
 
 <script>
 
