--- a/covid19state.html
+++ b/covid19state.html
@@ -677,6 +677,7 @@
 <script src=USAData_699.js></script>
 <script src=USAData_700.js></script>
 <script src=USAData_701.js></script>
+<script src=USAData_702.js></script>
 
 <script>
 
