--- a/covid19usa.html
+++ b/covid19usa.html
@@ -700,6 +700,7 @@
 <script src=USAData_699.js></script>
 <script src=USAData_700.js></script>
 <script src=USAData_701.js></script>
+<script src=USAData_702.js></script>
 <script>
 
 var MinLat = 25;
