Updated data to 02/25/2022 + VaxData

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -736,6 +736,7 @@
 <script src=RegData_700.js></script>
 <script src=RegData_701.js></script>
 <script src=RegData_702.js></script>
+<script src=RegData_703.js></script>
 
 <script>
 
