--- a/covid19int.html
+++ b/covid19int.html
@@ -736,6 +736,7 @@
 <script src=IntData_700.js></script>
 <script src=IntData_701.js></script>
 <script src=IntData_702.js></script>
+<script src=IntData_703.js></script>
 
 <script>
 
