--- a/covid19state.html
+++ b/covid19state.html
@@ -678,6 +678,7 @@
 <script src=USAData_700.js></script>
 <script src=USAData_701.js></script>
 <script src=USAData_702.js></script>
+<script src=USAData_703.js></script>
 
 <script>
 
