Updated data to 02/26/2022 + VaxData

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -737,6 +737,7 @@
 <script src=RegData_701.js></script>
 <script src=RegData_702.js></script>
 <script src=RegData_703.js></script>
+<script src=RegData_704.js></script>
 
 <script>
 
