--- a/covid19usa.html
+++ b/covid19usa.html
@@ -702,6 +702,7 @@
 <script src=USAData_701.js></script>
 <script src=USAData_702.js></script>
 <script src=USAData_703.js></script>
+<script src=USAData_704.js></script>
 <script>
 
 var MinLat = 25;
