--- a/covid19int.html
+++ b/covid19int.html
@@ -737,6 +737,7 @@
 <script src=IntData_701.js></script>
 <script src=IntData_702.js></script>
 <script src=IntData_703.js></script>
+<script src=IntData_704.js></script>
 
 <script>
 
