--- a/covid19state.html
+++ b/covid19state.html
@@ -679,6 +679,7 @@
 <script src=USAData_701.js></script>
 <script src=USAData_702.js></script>
 <script src=USAData_703.js></script>
+<script src=USAData_704.js></script>
 
 <script>
 
