Updated data to 02/27/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -738,6 +738,7 @@
 <script src=IntData_702.js></script>
 <script src=IntData_703.js></script>
 <script src=IntData_704.js></script>
+<script src=IntData_705.js></script>
 
 <script>
 
