--- a/covid19reg.html
+++ b/covid19reg.html
@@ -738,6 +738,7 @@
 <script src=RegData_702.js></script>
 <script src=RegData_703.js></script>
 <script src=RegData_704.js></script>
+<script src=RegData_705.js></script>
 
 <script>
 
