--- a/covid19state.html
+++ b/covid19state.html
@@ -680,6 +680,7 @@
 <script src=USAData_702.js></script>
 <script src=USAData_703.js></script>
 <script src=USAData_704.js></script>
+<script src=USAData_705.js></script>
 
 <script>
 
