Updated data to 02/28/2022 + VaxData

--- a/covid19state.html
+++ b/covid19state.html
@@ -681,6 +681,7 @@
 <script src=USAData_703.js></script>
 <script src=USAData_704.js></script>
 <script src=USAData_705.js></script>
+<script src=USAData_706.js></script>
 
 <script>
 
