--- a/covid19int.html
+++ b/covid19int.html
@@ -739,6 +739,7 @@
 <script src=IntData_703.js></script>
 <script src=IntData_704.js></script>
 <script src=IntData_705.js></script>
+<script src=IntData_706.js></script>
 
 <script>
 
