--- a/covid19reg.html
+++ b/covid19reg.html
@@ -739,6 +739,7 @@
 <script src=RegData_703.js></script>
 <script src=RegData_704.js></script>
 <script src=RegData_705.js></script>
+<script src=RegData_706.js></script>
 
 <script>
 
