Updated data to 03/01/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -740,6 +740,7 @@
 <script src=IntData_704.js></script>
 <script src=IntData_705.js></script>
 <script src=IntData_706.js></script>
+<script src=IntData_707.js></script>
 
 <script>
 
