--- a/covid19reg.html
+++ b/covid19reg.html
@@ -740,6 +740,7 @@
 <script src=RegData_704.js></script>
 <script src=RegData_705.js></script>
 <script src=RegData_706.js></script>
+<script src=RegData_707.js></script>
 
 <script>
 
