--- a/covid19state.html
+++ b/covid19state.html
@@ -682,6 +682,7 @@
 <script src=USAData_704.js></script>
 <script src=USAData_705.js></script>
 <script src=USAData_706.js></script>
+<script src=USAData_707.js></script>
 
 <script>
 
