Updated data to 03/02/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -741,6 +741,7 @@
 <script src=IntData_705.js></script>
 <script src=IntData_706.js></script>
 <script src=IntData_707.js></script>
+<script src=IntData_708.js></script>
 
 <script>
 
