--- a/covid19reg.html
+++ b/covid19reg.html
@@ -741,6 +741,7 @@
 <script src=RegData_705.js></script>
 <script src=RegData_706.js></script>
 <script src=RegData_707.js></script>
+<script src=RegData_708.js></script>
 
 <script>
 
