--- a/covid19usa.html
+++ b/covid19usa.html
@@ -706,6 +706,7 @@
 <script src=USAData_705.js></script>
 <script src=USAData_706.js></script>
 <script src=USAData_707.js></script>
+<script src=USAData_708.js></script>
 <script>
 
 var MinLat = 25;
