Updated data to 03/03/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -742,6 +742,7 @@
 <script src=IntData_706.js></script>
 <script src=IntData_707.js></script>
 <script src=IntData_708.js></script>
+<script src=IntData_709.js></script>
 
 <script>
 
