--- a/covid19reg.html
+++ b/covid19reg.html
@@ -742,6 +742,7 @@
 <script src=RegData_706.js></script>
 <script src=RegData_707.js></script>
 <script src=RegData_708.js></script>
+<script src=RegData_709.js></script>
 
 <script>
 
