Updated data to 03/04/2022 + VaxData

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -743,6 +743,7 @@
 <script src=RegData_707.js></script>
 <script src=RegData_708.js></script>
 <script src=RegData_709.js></script>
+<script src=RegData_710.js></script>
 
 <script>
 
