--- a/covid19state.html
+++ b/covid19state.html
@@ -685,6 +685,7 @@
 <script src=USAData_707.js></script>
 <script src=USAData_708.js></script>
 <script src=USAData_709.js></script>
+<script src=USAData_710.js></script>
 
 <script>
 
