--- a/covid19int.html
+++ b/covid19int.html
@@ -743,6 +743,7 @@
 <script src=IntData_707.js></script>
 <script src=IntData_708.js></script>
 <script src=IntData_709.js></script>
+<script src=IntData_710.js></script>
 
 <script>
 
