--- a/covid19usa.html
+++ b/covid19usa.html
@@ -708,6 +708,7 @@
 <script src=USAData_707.js></script>
 <script src=USAData_708.js></script>
 <script src=USAData_709.js></script>
+<script src=USAData_710.js></script>
 <script>
 
 var MinLat = 25;
