--- a/covid19int.html
+++ b/covid19int.html
@@ -744,6 +744,7 @@
 <script src=IntData_708.js></script>
 <script src=IntData_709.js></script>
 <script src=IntData_710.js></script>
+<script src=IntData_711.js></script>
 
 <script>
 
