--- a/covid19reg.html
+++ b/covid19reg.html
@@ -744,6 +744,7 @@
 <script src=RegData_708.js></script>
 <script src=RegData_709.js></script>
 <script src=RegData_710.js></script>
+<script src=RegData_711.js></script>
 
 <script>
 
