--- a/covid19state.html
+++ b/covid19state.html
@@ -686,6 +686,7 @@
 <script src=USAData_708.js></script>
 <script src=USAData_709.js></script>
 <script src=USAData_710.js></script>
+<script src=USAData_711.js></script>
 
 <script>
 
