--- a/covid19int.html
+++ b/covid19int.html
@@ -745,6 +745,7 @@
 <script src=IntData_709.js></script>
 <script src=IntData_710.js></script>
 <script src=IntData_711.js></script>
+<script src=IntData_712.js></script>
 
 <script>
 
