--- a/covid19reg.html
+++ b/covid19reg.html
@@ -745,6 +745,7 @@
 <script src=RegData_709.js></script>
 <script src=RegData_710.js></script>
 <script src=RegData_711.js></script>
+<script src=RegData_712.js></script>
 
 <script>
 
