Updated data to 03/07/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -746,6 +746,7 @@
 <script src=IntData_710.js></script>
 <script src=IntData_711.js></script>
 <script src=IntData_712.js></script>
+<script src=IntData_713.js></script>
 
 <script>
 
