--- a/covid19reg.html
+++ b/covid19reg.html
@@ -746,6 +746,7 @@
 <script src=RegData_710.js></script>
 <script src=RegData_711.js></script>
 <script src=RegData_712.js></script>
+<script src=RegData_713.js></script>
 
 <script>
 
