--- a/covid19usa.html
+++ b/covid19usa.html
@@ -711,6 +711,7 @@
 <script src=USAData_710.js></script>
 <script src=USAData_711.js></script>
 <script src=USAData_712.js></script>
+<script src=USAData_713.js></script>
 <script>
 
 var MinLat = 25;
