--- a/covid19state.html
+++ b/covid19state.html
@@ -688,6 +688,7 @@
 <script src=USAData_710.js></script>
 <script src=USAData_711.js></script>
 <script src=USAData_712.js></script>
+<script src=USAData_713.js></script>
 
 <script>
 
