--- a/covid19int.html
+++ b/covid19int.html
@@ -747,6 +747,8 @@
 <script src=IntData_711.js></script>
 <script src=IntData_712.js></script>
 <script src=IntData_713.js></script>
+<script src=IntData_714.js></script>
+<script src=IntData_715.js></script>
 
 <script>
 
