--- a/covid19reg.html
+++ b/covid19reg.html
@@ -747,6 +747,8 @@
 <script src=RegData_711.js></script>
 <script src=RegData_712.js></script>
 <script src=RegData_713.js></script>
+<script src=RegData_714.js></script>
+<script src=RegData_715.js></script>
 
 <script>
 
