--- a/covid19state.html
+++ b/covid19state.html
@@ -689,6 +689,8 @@
 <script src=USAData_711.js></script>
 <script src=USAData_712.js></script>
 <script src=USAData_713.js></script>
+<script src=USAData_714.js></script>
+<script src=USAData_715.js></script>
 
 <script>
 
