Updated data to 03/10/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -749,6 +749,7 @@
 <script src=IntData_713.js></script>
 <script src=IntData_714.js></script>
 <script src=IntData_715.js></script>
+<script src=IntData_716.js></script>
 
 <script>
 
