--- a/covid19state.html
+++ b/covid19state.html
@@ -691,6 +691,7 @@
 <script src=USAData_713.js></script>
 <script src=USAData_714.js></script>
 <script src=USAData_715.js></script>
+<script src=USAData_716.js></script>
 
 <script>
 
