--- a/covid19reg.html
+++ b/covid19reg.html
@@ -749,6 +749,7 @@
 <script src=RegData_713.js></script>
 <script src=RegData_714.js></script>
 <script src=RegData_715.js></script>
+<script src=RegData_716.js></script>
 
 <script>
 
