Updated data to 03/11/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -750,6 +750,7 @@
 <script src=IntData_714.js></script>
 <script src=IntData_715.js></script>
 <script src=IntData_716.js></script>
+<script src=IntData_717.js></script>
 
 <script>
 
