--- a/covid19state.html
+++ b/covid19state.html
@@ -692,6 +692,7 @@
 <script src=USAData_714.js></script>
 <script src=USAData_715.js></script>
 <script src=USAData_716.js></script>
+<script src=USAData_717.js></script>
 
 <script>
 
