--- a/covid19reg.html
+++ b/covid19reg.html
@@ -750,6 +750,7 @@
 <script src=RegData_714.js></script>
 <script src=RegData_715.js></script>
 <script src=RegData_716.js></script>
+<script src=RegData_717.js></script>
 
 <script>
 
