--- a/covid19int.html
+++ b/covid19int.html
@@ -751,6 +751,8 @@
 <script src=IntData_715.js></script>
 <script src=IntData_716.js></script>
 <script src=IntData_717.js></script>
+<script src=IntData_718.js></script>
+<script src=IntData_719.js></script>
 
 <script>
 
