--- a/covid19reg.html
+++ b/covid19reg.html
@@ -751,6 +751,8 @@
 <script src=RegData_715.js></script>
 <script src=RegData_716.js></script>
 <script src=RegData_717.js></script>
+<script src=RegData_718.js></script>
+<script src=RegData_719.js></script>
 
 <script>
 
