--- a/covid19state.html
+++ b/covid19state.html
@@ -693,6 +693,8 @@
 <script src=USAData_715.js></script>
 <script src=USAData_716.js></script>
 <script src=USAData_717.js></script>
+<script src=USAData_718.js></script>
+<script src=USAData_719.js></script>
 
 <script>
 
