--- a/covid19usa.html
+++ b/covid19usa.html
@@ -716,6 +716,8 @@
 <script src=USAData_715.js></script>
 <script src=USAData_716.js></script>
 <script src=USAData_717.js></script>
+<script src=USAData_718.js></script>
+<script src=USAData_719.js></script>
 <script>
 
 var MinLat = 25;
