Updated data to 03/16/2022 + VaxData (three days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -753,6 +753,9 @@
 <script src=IntData_717.js></script>
 <script src=IntData_718.js></script>
 <script src=IntData_719.js></script>
+<script src=IntData_720.js></script>
+<script src=IntData_721.js></script>
+<script src=IntData_722.js></script>
 
 <script>
 
