--- a/covid19usa.html
+++ b/covid19usa.html
@@ -718,6 +718,9 @@
 <script src=USAData_717.js></script>
 <script src=USAData_718.js></script>
 <script src=USAData_719.js></script>
+<script src=USAData_720.js></script>
+<script src=USAData_721.js></script>
+<script src=USAData_722.js></script>
 <script>
 
 var MinLat = 25;
