--- a/covid19reg.html
+++ b/covid19reg.html
@@ -753,6 +753,9 @@
 <script src=RegData_717.js></script>
 <script src=RegData_718.js></script>
 <script src=RegData_719.js></script>
+<script src=RegData_720.js></script>
+<script src=RegData_721.js></script>
+<script src=RegData_722.js></script>
 
 <script>
 
