Updated data to 03/17/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -756,6 +756,7 @@
 <script src=IntData_720.js></script>
 <script src=IntData_721.js></script>
 <script src=IntData_722.js></script>
+<script src=IntData_723.js></script>
 
 <script>
 
