--- a/covid19reg.html
+++ b/covid19reg.html
@@ -756,6 +756,7 @@
 <script src=RegData_720.js></script>
 <script src=RegData_721.js></script>
 <script src=RegData_722.js></script>
+<script src=RegData_723.js></script>
 
 <script>
 
