--- a/covid19usa.html
+++ b/covid19usa.html
@@ -721,6 +721,7 @@
 <script src=USAData_720.js></script>
 <script src=USAData_721.js></script>
 <script src=USAData_722.js></script>
+<script src=USAData_723.js></script>
 <script>
 
 var MinLat = 25;
