--- a/covid19state.html
+++ b/covid19state.html
@@ -698,6 +698,7 @@
 <script src=USAData_720.js></script>
 <script src=USAData_721.js></script>
 <script src=USAData_722.js></script>
+<script src=USAData_723.js></script>
 
 <script>
 
