Updated data to 03/18/2022 + VaxData

--- a/covid19int.html
+++ b/covid19int.html
@@ -757,6 +757,7 @@
 <script src=IntData_721.js></script>
 <script src=IntData_722.js></script>
 <script src=IntData_723.js></script>
+<script src=IntData_724.js></script>
 
 <script>
 
