--- a/covid19state.html
+++ b/covid19state.html
@@ -699,6 +699,7 @@
 <script src=USAData_721.js></script>
 <script src=USAData_722.js></script>
 <script src=USAData_723.js></script>
+<script src=USAData_724.js></script>
 
 <script>
 
