--- a/covid19reg.html
+++ b/covid19reg.html
@@ -757,6 +757,7 @@
 <script src=RegData_721.js></script>
 <script src=RegData_722.js></script>
 <script src=RegData_723.js></script>
+<script src=RegData_724.js></script>
 
 <script>
 
