--- a/covid19usa.html
+++ b/covid19usa.html
@@ -722,6 +722,7 @@
 <script src=USAData_721.js></script>
 <script src=USAData_722.js></script>
 <script src=USAData_723.js></script>
+<script src=USAData_724.js></script>
 <script>
 
 var MinLat = 25;
