Updated data to 03/23/2022 + VaxData (five days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -758,6 +758,11 @@
 <script src=IntData_722.js></script>
 <script src=IntData_723.js></script>
 <script src=IntData_724.js></script>
+<script src=IntData_725.js></script>
+<script src=IntData_726.js></script>
+<script src=IntData_727.js></script>
+<script src=IntData_728.js></script>
+<script src=IntData_729.js></script>
 
 <script>
 
