--- a/covid19reg.html
+++ b/covid19reg.html
@@ -758,6 +758,11 @@
 <script src=RegData_722.js></script>
 <script src=RegData_723.js></script>
 <script src=RegData_724.js></script>
+<script src=RegData_725.js></script>
+<script src=RegData_726.js></script>
+<script src=RegData_727.js></script>
+<script src=RegData_728.js></script>
+<script src=RegData_729.js></script>
 
 <script>
 
