--- a/covid19state.html
+++ b/covid19state.html
@@ -700,6 +700,11 @@
 <script src=USAData_722.js></script>
 <script src=USAData_723.js></script>
 <script src=USAData_724.js></script>
+<script src=USAData_725.js></script>
+<script src=USAData_726.js></script>
+<script src=USAData_727.js></script>
+<script src=USAData_728.js></script>
+<script src=USAData_729.js></script>
 
 <script>
 
