Updated data to 03/25/2022 + VaxData (two days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -763,6 +763,8 @@
 <script src=IntData_727.js></script>
 <script src=IntData_728.js></script>
 <script src=IntData_729.js></script>
+<script src=IntData_730.js></script>
+<script src=IntData_731.js></script>
 
 <script>
 
