--- a/covid19reg.html
+++ b/covid19reg.html
@@ -763,6 +763,8 @@
 <script src=RegData_727.js></script>
 <script src=RegData_728.js></script>
 <script src=RegData_729.js></script>
+<script src=RegData_730.js></script>
+<script src=RegData_731.js></script>
 
 <script>
 
