--- a/covid19state.html
+++ b/covid19state.html
@@ -705,6 +705,8 @@
 <script src=USAData_727.js></script>
 <script src=USAData_728.js></script>
 <script src=USAData_729.js></script>
+<script src=USAData_730.js></script>
+<script src=USAData_731.js></script>
 
 <script>
 
