--- a/covid19usa.html
+++ b/covid19usa.html
@@ -728,6 +728,8 @@
 <script src=USAData_727.js></script>
 <script src=USAData_728.js></script>
 <script src=USAData_729.js></script>
+<script src=USAData_730.js></script>
+<script src=USAData_731.js></script>
 <script>
 
 var MinLat = 25;
