Updated data to 04/29/2022 + VaxData (four days worth)

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -765,6 +765,10 @@
 <script src=RegData_729.js></script>
 <script src=RegData_730.js></script>
 <script src=RegData_731.js></script>
+<script src=RegData_732.js></script>
+<script src=RegData_733.js></script>
+<script src=RegData_734.js></script>
+<script src=RegData_735.js></script>
 
 <script>
 
