--- a/covid19usa.html
+++ b/covid19usa.html
@@ -730,6 +730,10 @@
 <script src=USAData_729.js></script>
 <script src=USAData_730.js></script>
 <script src=USAData_731.js></script>
+<script src=USAData_732.js></script>
+<script src=USAData_733.js></script>
+<script src=USAData_734.js></script>
+<script src=USAData_735.js></script>
 <script>
 
 var MinLat = 25;
