--- a/covid19int.html
+++ b/covid19int.html
@@ -765,6 +765,10 @@
 <script src=IntData_729.js></script>
 <script src=IntData_730.js></script>
 <script src=IntData_731.js></script>
+<script src=IntData_732.js></script>
+<script src=IntData_733.js></script>
+<script src=IntData_734.js></script>
+<script src=IntData_735.js></script>
 
 <script>
 
