Updated data to 04/01/2022 + VaxData (three days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -769,6 +769,9 @@
 <script src=IntData_733.js></script>
 <script src=IntData_734.js></script>
 <script src=IntData_735.js></script>
+<script src=IntData_736.js></script>
+<script src=IntData_737.js></script>
+<script src=IntData_738.js></script>
 
 <script>
 
