--- a/covid19state.html
+++ b/covid19state.html
@@ -711,6 +711,9 @@
 <script src=USAData_733.js></script>
 <script src=USAData_734.js></script>
 <script src=USAData_735.js></script>
+<script src=USAData_736.js></script>
+<script src=USAData_737.js></script>
+<script src=USAData_738.js></script>
 
 <script>
 
