--- a/covid19reg.html
+++ b/covid19reg.html
@@ -769,6 +769,9 @@
 <script src=RegData_733.js></script>
 <script src=RegData_734.js></script>
 <script src=RegData_735.js></script>
+<script src=RegData_736.js></script>
+<script src=RegData_737.js></script>
+<script src=RegData_738.js></script>
 
 <script>
 
