--- a/covid19usa.html
+++ b/covid19usa.html
@@ -734,6 +734,9 @@
 <script src=USAData_733.js></script>
 <script src=USAData_734.js></script>
 <script src=USAData_735.js></script>
+<script src=USAData_736.js></script>
+<script src=USAData_737.js></script>
+<script src=USAData_738.js></script>
 <script>
 
 var MinLat = 25;
