Updated data to 04/04/2022 + VaxData (three days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -772,6 +772,9 @@
 <script src=IntData_736.js></script>
 <script src=IntData_737.js></script>
 <script src=IntData_738.js></script>
+<script src=IntData_739.js></script>
+<script src=IntData_740.js></script>
+<script src=IntData_741.js></script>
 
 <script>
 
