--- a/covid19reg.html
+++ b/covid19reg.html
@@ -772,6 +772,9 @@
 <script src=RegData_736.js></script>
 <script src=RegData_737.js></script>
 <script src=RegData_738.js></script>
+<script src=RegData_739.js></script>
+<script src=RegData_740.js></script>
+<script src=RegData_741.js></script>
 
 <script>
 
