--- a/covid19state.html
+++ b/covid19state.html
@@ -714,6 +714,9 @@
 <script src=USAData_736.js></script>
 <script src=USAData_737.js></script>
 <script src=USAData_738.js></script>
+<script src=USAData_739.js></script>
+<script src=USAData_740.js></script>
+<script src=USAData_741.js></script>
 
 <script>
 
