Updated data to 04/08/2022 + VaxData (four days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -775,6 +775,10 @@
 <script src=IntData_739.js></script>
 <script src=IntData_740.js></script>
 <script src=IntData_741.js></script>
+<script src=IntData_742.js></script>
+<script src=IntData_743.js></script>
+<script src=IntData_744.js></script>
+<script src=IntData_745.js></script>
 
 <script>
 
