--- a/covid19reg.html
+++ b/covid19reg.html
@@ -775,6 +775,10 @@
 <script src=RegData_739.js></script>
 <script src=RegData_740.js></script>
 <script src=RegData_741.js></script>
+<script src=RegData_742.js></script>
+<script src=RegData_743.js></script>
+<script src=RegData_744.js></script>
+<script src=RegData_745.js></script>
 
 <script>
 
