--- a/covid19state.html
+++ b/covid19state.html
@@ -717,6 +717,10 @@
 <script src=USAData_739.js></script>
 <script src=USAData_740.js></script>
 <script src=USAData_741.js></script>
+<script src=USAData_742.js></script>
+<script src=USAData_743.js></script>
+<script src=USAData_744.js></script>
+<script src=USAData_745.js></script>
 
 <script>
 
