Updated data to 04/22/2022 + Vaxdata (14 days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -779,6 +779,20 @@
 <script src=IntData_743.js></script>
 <script src=IntData_744.js></script>
 <script src=IntData_745.js></script>
+<script src=IntData_746.js></script>
+<script src=IntData_747.js></script>
+<script src=IntData_748.js></script>
+<script src=IntData_749.js></script>
+<script src=IntData_750.js></script>
+<script src=IntData_751.js></script>
+<script src=IntData_752.js></script>
+<script src=IntData_753.js></script>
+<script src=IntData_754.js></script>
+<script src=IntData_755.js></script>
+<script src=IntData_756.js></script>
+<script src=IntData_757.js></script>
+<script src=IntData_758.js></script>
+<script src=IntData_759.js></script>
 
 <script>
 
