--- a/covid19reg.html
+++ b/covid19reg.html
@@ -779,6 +779,20 @@
 <script src=RegData_743.js></script>
 <script src=RegData_744.js></script>
 <script src=RegData_745.js></script>
+<script src=RegData_746.js></script>
+<script src=RegData_747.js></script>
+<script src=RegData_748.js></script>
+<script src=RegData_749.js></script>
+<script src=RegData_750.js></script>
+<script src=RegData_751.js></script>
+<script src=RegData_752.js></script>
+<script src=RegData_753.js></script>
+<script src=RegData_754.js></script>
+<script src=RegData_755.js></script>
+<script src=RegData_756.js></script>
+<script src=RegData_757.js></script>
+<script src=RegData_758.js></script>
+<script src=RegData_759.js></script>
 
 <script>
 
