--- a/covid19usa.html
+++ b/covid19usa.html
@@ -744,6 +744,20 @@
 <script src=USAData_743.js></script>
 <script src=USAData_744.js></script>
 <script src=USAData_745.js></script>
+<script src=USAData_746.js></script>
+<script src=USAData_747.js></script>
+<script src=USAData_748.js></script>
+<script src=USAData_749.js></script>
+<script src=USAData_750.js></script>
+<script src=USAData_751.js></script>
+<script src=USAData_752.js></script>
+<script src=USAData_753.js></script>
+<script src=USAData_754.js></script>
+<script src=USAData_755.js></script>
+<script src=USAData_756.js></script>
+<script src=USAData_757.js></script>
+<script src=USAData_758.js></script>
+<script src=USAData_759.js></script>
 <script>
 
 var MinLat = 25;
