Updated data to 05/04/2022 + VaxData (12 days worth)

--- a/covid19int.html
+++ b/covid19int.html
@@ -793,6 +793,18 @@
 <script src=IntData_757.js></script>
 <script src=IntData_758.js></script>
 <script src=IntData_759.js></script>
+<script src=IntData_760.js></script>
+<script src=IntData_761.js></script>
+<script src=IntData_762.js></script>
+<script src=IntData_763.js></script>
+<script src=IntData_764.js></script>
+<script src=IntData_765.js></script>
+<script src=IntData_766.js></script>
+<script src=IntData_767.js></script>
+<script src=IntData_768.js></script>
+<script src=IntData_769.js></script>
+<script src=IntData_770.js></script>
+<script src=IntData_771.js></script>
 
 <script>
 
