--- a/covid19reg.html
+++ b/covid19reg.html
@@ -793,6 +793,18 @@
 <script src=RegData_757.js></script>
 <script src=RegData_758.js></script>
 <script src=RegData_759.js></script>
+<script src=RegData_760.js></script>
+<script src=RegData_761.js></script>
+<script src=RegData_762.js></script>
+<script src=RegData_763.js></script>
+<script src=RegData_764.js></script>
+<script src=RegData_765.js></script>
+<script src=RegData_766.js></script>
+<script src=RegData_767.js></script>
+<script src=RegData_768.js></script>
+<script src=RegData_769.js></script>
+<script src=RegData_770.js></script>
+<script src=RegData_771.js></script>
 
 <script>
 
