--- a/covid19usa.html
+++ b/covid19usa.html
@@ -758,6 +758,18 @@
 <script src=USAData_757.js></script>
 <script src=USAData_758.js></script>
 <script src=USAData_759.js></script>
+<script src=USAData_760.js></script>
+<script src=USAData_761.js></script>
+<script src=USAData_762.js></script>
+<script src=USAData_763.js></script>
+<script src=USAData_764.js></script>
+<script src=USAData_765.js></script>
+<script src=USAData_766.js></script>
+<script src=USAData_767.js></script>
+<script src=USAData_768.js></script>
+<script src=USAData_769.js></script>
+<script src=USAData_770.js></script>
+<script src=USAData_771.js></script>
 <script>
 
 var MinLat = 25;
